# agent-test

./: README.md  app.py  opencode.json  pyproject.toml
.opencode/plans/: 1775410307307-mighty-canyon.md
docs/: ARCHITECTURE.md
